2018-10-15  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #86660: Migrate to TYPO3 9 LTS
	* Update version to 6.5.0

2018-02-10  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #83562: Use standard SQL table definition
	* Update version to 6.4.3

2017-04-11  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Update version to 6.4.2
	* Resolves #80815: Remove deprecated TCA option show_thumbs

2017-01-24  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Update requirements
	* Update version to 6.4.1

2017-01-07  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Cleanup extension configuration files
	* Follow-up to #79187: Use TYPO3 8 DB API

2017-01-06  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79187: Use TYPO3 8 DB API
	* Resolves #79188: Use registered icon in frontend
	* Resolves #79189: Migrate extension icon to svg
	* Resolves #76679: Wrong flag for chinese language
	* Update version to 6.4.0

2017-01-05  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79176: Missing renderType on TCA select definition
	* Resolves #79178: Migrate to LTS 7 icon factory
	* Resolves #78340: Compatibility with TYPO3 version 8.x and require TYPO3 7 LTS

2016-05-22  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #76096: Labels not working anymore after using the widget (Thanks to Makus Klein)
	* Update version to 6.3.4	

2016-03-10  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #74818: Remove references to sysext cms labels removed from TYPO3 CMS 7.6
	* Update version to 6.3.3

2016-03-09  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #73974: Static Info Tables version to 6.3.9 breaks extension
	* Require Static Info Tables 6.3.9
	* Update version to 6.3.1
	* Follow-up to Resolves #73974: Static Info Tables version to 6.3.9 breaks extension
	* Update version to 6.3.2

2015-12-22  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #71522: Languages not available should be removed from selector
