@@ -1,3 +1,7 @@
+2018-10-18  Stanislas Rolland  <typo3(arobas)sjbr.ca>
+
+	* Resolves #86692: Use language aspect of frontend context
+
 2018-10-15  Stanislas Rolland  <typo3(arobas)sjbr.ca>
 
 	* Resolves #86660: Migrate to TYPO3 9 LTS
